fix(examples): scroll shrink container overflow
  - also make a bit smaller on mobile so you can scroll past it if you want.

--- a/ng2-material/components/toolbar/toolbar.scss
+++ b/ng2-material/components/toolbar/toolbar.scss
@@ -88,7 +88,9 @@ md-toolbar {
   }
 
   ~ md-content {
-    overflow: hidden;
+    &:not([scroll-shrink]){
+      overflow: hidden;
+    }
     > md-list {
       padding: 0;
 
